# cmakerepo1

./: CMakeLists.txt  README.md  addition.cpp  addition.h
lib/: libAdditionLibrary.so.1
